Update AGENTS.md profiles table to match latest master README.md